--- a/paper/main.tex
+++ b/paper/main.tex
@@ -42,7 +42,7 @@
 \newcommand{\DL}{\texttt{DLmalloc}}
 \newcommand{\JE}{\texttt{jemalloc}}
 \newcommand{\NA}{\texttt{numalloc}}
-\newcommand{\NM}{\texttt{numalloc}}
+\newcommand{\NM}{\texttt{NUMAlloc}}
 
 
 \newcommand{\pthread}{\texttt{pthread}}
@@ -86,4 +86,3 @@
 }
 
 \end{document}
-he 
