--- a/paper/main.tex
+++ b/paper/main.tex
@@ -10,7 +10,9 @@
 \usepackage{txfonts}
 \usepackage{pslatex}    
 \usepackage{pifont}
-%\usepackage{bbding}
+\usepackage{graphicx}
+\usepackage{caption}
+\usepackage{subcaption}
 \usepackage{multirow}
 \usepackage{makecell}
 \usepackage[justification=centering]{caption}
@@ -41,7 +43,7 @@
 \newcommand{\DieHarder}{\texttt{DieHarder}}
 \newcommand{\DL}{\texttt{DLmalloc}}
 \newcommand{\JE}{\texttt{jemalloc}}
-\newcommand{\NA}{\texttt{numalloc}}
+\newcommand{\NA}{\texttt{NUMAlloc}}
 \newcommand{\NM}{\texttt{NUMAlloc}}
 
 
